####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = connect0.xpm connect1.xpm connect2.xpm connect3.xpm connect4.xpm connect5.xpm connect6.xpm dock_hand1.xpm dock_hand2.xpm dock_hand3.xpm kget.xpm Makefile.am md_delayed.xpm md_finished.xpm md_queued.xpm md_scheduled.xpm retrying.xpm target_hand1.xpm target_hand2.xpm target_hand3.xpm tool_clipboard.xpm tool_delay.xpm tool_delete.xpm tool_disconnect.xpm tool_dock.xpm tool_drop_target.xpm tool_expert.xpm tool_logwindow.xpm tool_normal.xpm tool_paste.xpm tool_pause.xpm tool_preferences.xpm tool_queue.xpm tool_restart.xpm tool_resume.xpm tool_shutdown.xpm tool_timer.xpm tool_uselastdir.xpm try0.xpm try1.xpm try2.xpm try3.xpm try4.xpm try5.xpm try6.xpm connect7.xpm try7.xpm tool_offline_mode-off.xpm tool_offline_mode-on.xpm 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/connect0.xpm $(kde_datadir)/kget/pics/connect0.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/connect1.xpm $(kde_datadir)/kget/pics/connect1.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/connect2.xpm $(kde_datadir)/kget/pics/connect2.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/connect3.xpm $(kde_datadir)/kget/pics/connect3.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/connect4.xpm $(kde_datadir)/kget/pics/connect4.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/connect5.xpm $(kde_datadir)/kget/pics/connect5.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/connect6.xpm $(kde_datadir)/kget/pics/connect6.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/dock_hand1.xpm $(kde_datadir)/kget/pics/dock_hand1.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/dock_hand2.xpm $(kde_datadir)/kget/pics/dock_hand2.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/dock_hand3.xpm $(kde_datadir)/kget/pics/dock_hand3.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/kget.xpm $(kde_datadir)/kget/pics/kget.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/md_delayed.xpm $(kde_datadir)/kget/pics/md_delayed.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/md_finished.xpm $(kde_datadir)/kget/pics/md_finished.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/md_queued.xpm $(kde_datadir)/kget/pics/md_queued.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/md_scheduled.xpm $(kde_datadir)/kget/pics/md_scheduled.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/retrying.xpm $(kde_datadir)/kget/pics/retrying.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/target_hand1.xpm $(kde_datadir)/kget/pics/target_hand1.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/target_hand2.xpm $(kde_datadir)/kget/pics/target_hand2.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/target_hand3.xpm $(kde_datadir)/kget/pics/target_hand3.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_clipboard.xpm $(kde_datadir)/kget/pics/tool_clipboard.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_delay.xpm $(kde_datadir)/kget/pics/tool_delay.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_delete.xpm $(kde_datadir)/kget/pics/tool_delete.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_disconnect.xpm $(kde_datadir)/kget/pics/tool_disconnect.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_dock.xpm $(kde_datadir)/kget/pics/tool_dock.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_drop_target.xpm $(kde_datadir)/kget/pics/tool_drop_target.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_expert.xpm $(kde_datadir)/kget/pics/tool_expert.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_logwindow.xpm $(kde_datadir)/kget/pics/tool_logwindow.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_normal.xpm $(kde_datadir)/kget/pics/tool_normal.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_paste.xpm $(kde_datadir)/kget/pics/tool_paste.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_pause.xpm $(kde_datadir)/kget/pics/tool_pause.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_preferences.xpm $(kde_datadir)/kget/pics/tool_preferences.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_queue.xpm $(kde_datadir)/kget/pics/tool_queue.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_restart.xpm $(kde_datadir)/kget/pics/tool_restart.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_resume.xpm $(kde_datadir)/kget/pics/tool_resume.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_shutdown.xpm $(kde_datadir)/kget/pics/tool_shutdown.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_timer.xpm $(kde_datadir)/kget/pics/tool_timer.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_uselastdir.xpm $(kde_datadir)/kget/pics/tool_uselastdir.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/try0.xpm $(kde_datadir)/kget/pics/try0.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/try1.xpm $(kde_datadir)/kget/pics/try1.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/try2.xpm $(kde_datadir)/kget/pics/try2.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/try3.xpm $(kde_datadir)/kget/pics/try3.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/try4.xpm $(kde_datadir)/kget/pics/try4.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/try5.xpm $(kde_datadir)/kget/pics/try5.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/try6.xpm $(kde_datadir)/kget/pics/try6.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/connect7.xpm $(kde_datadir)/kget/pics/connect7.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/try7.xpm $(kde_datadir)/kget/pics/try7.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_offline_mode-off.xpm $(kde_datadir)/kget/pics/tool_offline_mode-off.xpm
	$(mkinstalldirs) $(kde_datadir)/kget/pics/
	$(INSTALL_DATA) $(srcdir)/tool_offline_mode-on.xpm $(kde_datadir)/kget/pics/tool_offline_mode-on.xpm

uninstall-local:
	-rm -f $(kde_datadir)/kget/pics/connect0.xpm
	-rm -f $(kde_datadir)/kget/pics/connect1.xpm
	-rm -f $(kde_datadir)/kget/pics/connect2.xpm
	-rm -f $(kde_datadir)/kget/pics/connect3.xpm
	-rm -f $(kde_datadir)/kget/pics/connect4.xpm
	-rm -f $(kde_datadir)/kget/pics/connect5.xpm
	-rm -f $(kde_datadir)/kget/pics/connect6.xpm
	-rm -f $(kde_datadir)/kget/pics/dock_hand1.xpm
	-rm -f $(kde_datadir)/kget/pics/dock_hand2.xpm
	-rm -f $(kde_datadir)/kget/pics/dock_hand3.xpm
	-rm -f $(kde_datadir)/kget/pics/kget.xpm
	-rm -f $(kde_datadir)/kget/pics/md_delayed.xpm
	-rm -f $(kde_datadir)/kget/pics/md_finished.xpm
	-rm -f $(kde_datadir)/kget/pics/md_queued.xpm
	-rm -f $(kde_datadir)/kget/pics/md_scheduled.xpm
	-rm -f $(kde_datadir)/kget/pics/retrying.xpm
	-rm -f $(kde_datadir)/kget/pics/target_hand1.xpm
	-rm -f $(kde_datadir)/kget/pics/target_hand2.xpm
	-rm -f $(kde_datadir)/kget/pics/target_hand3.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_clipboard.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_delay.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_delete.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_disconnect.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_dock.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_drop_target.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_expert.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_logwindow.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_normal.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_paste.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_pause.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_preferences.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_queue.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_restart.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_resume.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_shutdown.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_timer.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_uselastdir.xpm
	-rm -f $(kde_datadir)/kget/pics/try0.xpm
	-rm -f $(kde_datadir)/kget/pics/try1.xpm
	-rm -f $(kde_datadir)/kget/pics/try2.xpm
	-rm -f $(kde_datadir)/kget/pics/try3.xpm
	-rm -f $(kde_datadir)/kget/pics/try4.xpm
	-rm -f $(kde_datadir)/kget/pics/try5.xpm
	-rm -f $(kde_datadir)/kget/pics/try6.xpm
	-rm -f $(kde_datadir)/kget/pics/connect7.xpm
	-rm -f $(kde_datadir)/kget/pics/try7.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_offline_mode-off.xpm
	-rm -f $(kde_datadir)/kget/pics/tool_offline_mode-on.xpm

