data_DATA = connect0.png connect1.png connect2.png connect3.png \
            connect4.png connect5.png connect6.png connect7.png \
            try0.png try1.png try2.png try3.png \
            try4.png try5.png try6.png try7.png \
            md_delayed.png md_finished.png md_queued.png md_scheduled.png \
            retrying.png \
            tool_clipboard.png tool_delay.png tool_disconnect.png \
            tool_expert.png tool_pause.png tool_resume.png tool_shutdown.png \
            tool_offline_mode-off.png tool_offline_mode-on.png tool_dock.png \
            tool_delete.png tool_normal.png tool_paste.png tool_queue.png \
            tool_timer.png tool_uselastdir.png tool_drop_target.png \
            tool_logwindow.png tool_preferences.png tool_restart.png dock.png \
            target.png 

datadir = $(kde_datadir)/kget/pics

EXTRA_DIST = $(data_DATA)

