pics_DATA = connect0.png connect1.png connect2.png connect3.png \
            connect4.png connect5.png connect6.png connect7.png \
            try0.png try1.png try2.png try3.png \
            try4.png try5.png try6.png try7.png \
            md_delayed.png md_finished.png md_queued.png md_scheduled.png \
            retrying.png target.png 

picsdir = $(kde_datadir)/kget/pics

EXTRA_DIST = $(pics_DATA)

