add_subdirectory(kio)
add_subdirectory(multisegmentkio)
add_subdirectory(metalink)
if (LIBKTORRENT_FOUND)
  add_subdirectory(bittorrent)
endif (LIBKTORRENT_FOUND)
add_subdirectory(mirrorsearch)
#add_subdirectory(contentfetch)
if (LIBMMS_FOUND)
  add_subdirectory(mmsthreads)
endif (LIBMMS_FOUND)
add_subdirectory(checksumsearch)

SET(SUPPORTED_KGET_MIMETYPES "${SUPPORTED_KGET_MIMETYPES}" PARENT_SCOPE)
